Fixed margin to count for the scrollbar on Windows

--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@
 
 .action-button {
  float:right;
-    margin-left: 5px;
+    margin-right: 8px;
 }
 
 .workspace-view-container .workspace-name {
